# phasar

./: bootstrap.sh
include/phasar/Controller/: AnalysisConfigurations.def
include/phasar/PhasarLLVM/AnalysisStrategy/: WholeProgramAnalysis.h
include/phasar/PhasarLLVM/DataFlowSolver/Mono/: InterMonoProblem.h  IntraMonoProblem.h
include/phasar/PhasarLLVM/DataFlowSolver/Mono/Problems/: InterMemReachDef.h  InterMonoFullConstantPropagation.h  InterMonoMemReachDef.h  InterMonoSolverTest.h  InterMonoTaintAnalysis.h  IntraMonoFullConstantPropagation.h  IntraMonoSolverTest.h
include/phasar/PhasarLLVM/DataFlowSolver/Mono/Solver/: InterMonoSolver.h
include/phasar/PhasarLLVM/Utils/: DataFlowAnalysisType.def
lib/Controller/: AnalysisController.cpp
lib/PhasarLLVM/DataFlowSolver/Mono/Problems/: InterMonoFullConstantPropagation.cpp  InterMonoMemReachDef.cpp  InterMonoSolverTest.cpp  InterMonoTaintAnalysis.cpp  IntraMonoFullConstantPropagation.cpp  IntraMonoSolverTest.cpp
tools/: CMakeLists.txt
tools/dfi_binding/: CMakeLists.txt  dfi_binding.cpp
